merubah alamat favicons

--- a/berita/motogp/halaman4.html
+++ b/berita/motogp/halaman4.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/png" href="/apple-touch-icon.png" />
+    <link rel="shortcut icon" type="image/png" href="/Tugas_4_html/apple-touch-icon.png" />
     <title>Web berita - Niomic</title>
   </head>
   <body>
