--- a/contact/halaman2.html
+++ b/contact/halaman2.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/png" href="/apple-touch-icon.png" />
+    <link rel="shortcut icon" type="image/png" href="/Tugas_4_html/apple-touch-icon.png" />
     <title>Web Berita - NIOMIC</title>
 
   </head>
